chore: fix tail ends of CsvRowState rename

--- a/FlameCsv.Core/Runtime/Materializer.Generated.tt
+++ b/FlameCsv.Core/Runtime/Materializer.Generated.tt
@@ -76,6 +76,8 @@ internal sealed class Materializer<T, <#= generics #>>
 {
     public override int ColumnCount => <#= current #>;
 
+    protected override Type RecordType => typeof(TResult);
+
     private readonly Func<<#= generics #>> valueFactory;
 
     public Materializer(
