refactor: simplify null writing

--- a/FlameCsv.Core/Runtime/Materializer.Generated.tt
+++ b/FlameCsv.Core/Runtime/Materializer.Generated.tt
@@ -25,7 +25,7 @@ internal abstract partial class Materializer
     /// <summary>
     /// Returns the constructor info for materializer of <typeparamref name="TResult"/>.
     /// </summary>
-    /// <param name="genericTypeParameters">Types of parsed columns in order</param>
+    /// <param name="bindings">Bindings of the collection used to create the materializer</param>
     /// <typeparam name="T">CSV token type</typeparam>
     /// <typeparam name="TResult">Type of the object/struct being read</typeparam>
     [ExcludeFromCodeCoverage]
