perf(core): add struct constraint to IMaterializer's reader

--- a/FlameCsv.Core/Runtime/Materializer.Generated.tt
+++ b/FlameCsv.Core/Runtime/Materializer.Generated.tt
@@ -112,7 +112,7 @@ internal sealed class Materializer<T, <#= generics #>>
         }
 #>
 
-    public TResult Parse<TReader>(ref TReader reader) where TReader : ICsvFieldReader<T>
+    public TResult Parse<TReader>(ref TReader reader) where TReader : struct, ICsvFieldReader<T>
     {
         reader.TryEnsureFieldCount(FieldCount);
 
