refactor: improve parsing perf
improve line parsing from sequences
vectorize RFC4180 unescaping

--- a/FlameCsv.Core/Runtime/Materializer.Generated.tt
+++ b/FlameCsv.Core/Runtime/Materializer.Generated.tt
@@ -112,10 +112,8 @@ internal sealed class Materializer<T, <#= generics #>>
         }
 #>
 
-    public TResult Parse<TReader>(ref TReader reader) where TReader : struct, ICsvFieldReader<T>
+    public TResult Parse(ref CsvFieldReader<T> reader)
     {
-        reader.TryEnsureFieldCount(FieldCount);
-
 <#
         for (var i = 0; i < current; i++)
         {
